# llm-reliability-lab

./: .gitattributes  .gitignore  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
configs/: dpo.yaml  eval.yaml  eval_real.yaml  mlflow.yaml  model.yaml  serving.yaml  sft.yaml  sft_real.yaml
data/: README.md
data/samples/: eval_prompts_sample.jsonl  preference_sample.jsonl  sft_sample.jsonl
eval_suites/: README.md  format_compliance.jsonl  grounded_qa.jsonl  instruction_following.jsonl  multilingual.jsonl  refusal_behavior.jsonl  robustness_perturbations.jsonl
eval_suites/plumbing/: repo_internal_plumbing.jsonl
reports/: README.md
reports/real_runs/: README.md
reports/sample/: README.md
reports/templates/: README.md  data_card.md  dpo_report.md  error_analysis.md  eval_report.md  model_card.md  regression_report.md  reproducibility_checklist.md  sft_report.md
scripts/: build_eval_suite.py  build_sft_dataset.py  check_hidden_unicode.py  compare_models.py  create_real_run_report.py  generate_report.py  merge_lora_adapter.py  preflight_sft_format.py  prepare_data.py  run_eval.py  serve_vllm.py  train_dpo.py  train_sft.py  validate_sft_dataset.py
src/llm_reliability_lab/: __init__.py  config.py  data.py  dpo.py  error_taxonomy.py  evaluate.py  inference.py  (+8 more)
tests/: test_build_sft_dataset.py  test_data_schema.py  test_error_taxonomy.py  test_hidden_unicode.py  test_inference_adapters.py  test_metrics.py  test_preflight_sft_format.py  test_prompt_templates.py  test_regression_detection.py  test_reporting.py  test_sft_formatting.py
(+10 files in other folders)
