[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-reliability-lab"
version = "0.1.0"
description = "A reproducible lab for post-training, evaluating, and debugging small open-weight language models."
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
  {name = "TrupologDS"}
]
dependencies = [
  "pydantic>=2.7,<2.14",
  "PyYAML>=6.0,<7",
]

[project.optional-dependencies]
train = [
  "accelerate>=0.33,<0.35",
  "datasets>=2.20,<2.22",
  "mlflow>=2.14,<3",
  "peft>=0.11,<0.13",
  "rich>=13.7,<15",
  "torch>=2.3,<2.5",
  "transformers>=4.43,<4.46",
  "trl>=0.9.6,<0.10",
]
eval = [
  "mlflow>=2.14,<3",
  "numpy>=1.26,<3",
  "pandas>=2.2,<3",
  "scikit-learn>=1.5,<2",
]
serving = [
  "openai>=1.35,<2",
  "vllm>=0.5,<0.7",
]
dev = [
  "pytest>=8.2,<10",
  "ruff>=0.6,<1",
  "pre-commit>=3.7,<5",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 120
target-version = "py311"
src = ["src", "tests", "scripts"]
extend-exclude = ["notebooks", ".venv", ".venv-gpu"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4", "SIM", "RUF"]
ignore = ["B008"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q"
